src/objects/ADvendio__RevenueScheduleDaily__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AccumulatedDeliveryTillNow__c</fullName>
        <label>Accumulated Delivery Till Now</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <description>The connection to the campaign item will be assigned automatically when a new campaign item is created.</description>
        <inlineHelpText>The connection to the campaign item will be assigned automatically when a new campaign item is created.</inlineHelpText>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Revenue Schedule Dailys</relationshipLabel>
        <relationshipName>RevenueScheduleDailys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Day__c</fullName>
        <description>This value will be filled automatically by a script. It displays the day in which the revenue was made.</description>
        <inlineHelpText>This value will be filled automatically by a script. It displays the day in which the revenue was made.</inlineHelpText>
        <label>Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredAIsManual__c</fullName>
        <label>Delivered AIs (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredAIs__c</fullName>
        <description>This value will be filled automatically by a script. It displays the delivered AIs of the assigned campaign item.</description>
        <inlineHelpText>This value will be filled automatically by a script. It displays the delivered AIs of the assigned campaign item.</inlineHelpText>
        <label>Delivered AIs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredClicksManual__c</fullName>
        <label>Delivered Clicks (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveredClicks__c</fullName>
        <description>This value will be filled automatically by a script. It displays the delivered clicks of the of the assigned campaign item.</description>
        <inlineHelpText>This value will be filled automatically by a script. It displays the delivered clicks of the of the assigned campaign item.</inlineHelpText>
        <label>Delivered Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Gross_amount_RSD__c</fullName>
        <formula>ROUND(ADvendio__CampaignItem__r.ADvendio__AmountAPEX__c / ADvendio__CampaignItem__r.ADvendio__Days__c, 2) + IF(OR(MONTH(ADvendio__Day__c) != MONTH(ADvendio__Day__c + 1), ADvendio__Day__c = ADvendio__CampaignItem__r.ADvendio__until_Date__c), (ADvendio__RevenueSchedule__r.ADvendio__Gross_amount_RS__c - ROUND(ADvendio__CampaignItem__r.ADvendio__AmountAPEX__c / ADvendio__CampaignItem__r.ADvendio__Days__c, 2) * ADvendio__RevenueSchedule__r.ADvendio__Days__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross amount (RSD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountB1__c</fullName>
        <formula>ADvendio__CampaignItem__r.ADvendio__AmountAPEX__c / ADvendio__CampaignItem__r.ADvendio__Quantity__c *ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (B1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountB2__c</fullName>
        <formula>ADvendio__CampaignItem__r.ADvendio__Amount_B2APEX__c / ADvendio__CampaignItem__r.ADvendio__Quantity__c *ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (B2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountB3__c</fullName>
        <formula>ADvendio__CampaignItem__r.ADvendio__Amount_B3APEX__c / ADvendio__CampaignItem__r.ADvendio__Quantity__c *ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (B3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountForecast__c</fullName>
        <description>This field calculates the invoice amount forecast depending on linear distribution, start of the campaign item and days.</description>
        <formula>CASE(1,
IF(ADvendio__CampaignItem__r.ADvendio__LinearDistribution__c = TRUE || ADvendio__CampaignItem__r.ADvendio__from_Date__c  &gt; TODAY(),1,0), 
ADvendio__CampaignItem__r.ADvendio__Amount_net3APEX__c / ADvendio__CampaignItem__r.ADvendio__Days__c,
ADvendio__CampaignItem__r.ADvendio__Amount_net3APEX__c * (ADvendio__InvoiceQuantityForecast__c / ADvendio__CampaignItem__r.ADvendio__Quantity__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculates the invoice amount forecast depending on linear distribution, start of the campaign item and days.</inlineHelpText>
        <label>Invoice Amount Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountN1__c</fullName>
        <formula>ADvendio__CampaignItem__r.ADvendio__Amount_netAPEX__c / ADvendio__CampaignItem__r.ADvendio__Quantity__c *ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (N1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountN2__c</fullName>
        <formula>ADvendio__CampaignItem__r.ADvendio__Amount_net_netAPEX__c / ADvendio__CampaignItem__r.ADvendio__Quantity__c * ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (N2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceAmountN3__c</fullName>
        <formula>ADvendio__CampaignItem__r.ADvendio__Amount_net3APEX__c / ADvendio__CampaignItem__r.ADvendio__Quantity__c * ADvendio__InvoiceQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (N3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceQuantityForecast__c</fullName>
        <description>This field calculates the invoice quantity forecast depending on linear distribution, start of the campaign item and days.</description>
        <formula>IF
(ADvendio__CampaignItem__r.ADvendio__LinearDistribution__c = TRUE || ADvendio__CampaignItem__r.ADvendio__from_Date__c &gt; TODAY() , ADvendio__CampaignItem__r.ADvendio__Quantity__c / ADvendio__CampaignItem__r.ADvendio__Days__c,
IF
(ADvendio__Day__c &lt; TODAY(), ADvendio__InvoiceQuantity__c , 
IF 
(ADvendio__AccumulatedDeliveryTillNow__c = 0, 0,
IF
(ADvendio__CampaignItem__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c &gt; 0,
(ADvendio__CampaignItem__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c) / (ADvendio__CampaignItem__r.ADvendio__until_Date__c - TODAY() +1), 0
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculates the invoice quantity forecast depending on linear distribution, start of the campaign item and days.</inlineHelpText>
        <label>Invoice Quantity Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceQuantityManual__c</fullName>
        <label>Invoice Quantity (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceQuantity__c</fullName>
        <formula>CASE(1,
	IF (ADvendio__CampaignItem__r.ADvendio__LinearDistribution__c, 1, 0),
	ADvendio__CampaignItem__r.ADvendio__Quantity__c / ADvendio__CampaignItem__r.ADvendio__Days__c,

	IF(!ISBLANK(ADvendio__QuantityManualFormula__c), 1,0),
	MAX(0, MIN(ADvendio__CampaignItem__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c + ADvendio__QuantityManualFormula__c, ADvendio__QuantityManualFormula__c)),
	
	CASE (
		ADvendio__CampaignItem__r.ADvendio__Billing_category__c,
		
		&quot;CPM&quot;,
		IF(
				ISBLANK(ADvendio__DeliveredAIs__c),
				0,
				MAX(0, MIN(ADvendio__CampaignItem__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c + ADvendio__DeliveredAIs__c, ADvendio__DeliveredAIs__c))),
		
		&quot;CPC&quot;,
		IF(
				ISBLANK(ADvendio__DeliveredClicks__c),
				0,
				MAX(0, MIN(ADvendio__CampaignItem__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c + ADvendio__DeliveredClicks__c, ADvendio__DeliveredClicks__c))),
		
		&quot;vCPM&quot;,
		IF(
				ISBLANK(ADvendio__ViewedAIs__c),
				0,
				MAX(0, MIN(ADvendio__CampaignItem__r.ADvendio__Quantity__c - ADvendio__AccumulatedDeliveryTillNow__c + ADvendio__ViewedAIs__c, ADvendio__ViewedAIs__c))),
		0
	)
)</formula>
        <label>Invoice Quantity (RSD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__QuantityManualFormula__c</fullName>
        <formula>CASE(1, 
	IF(ISBLANK(ADvendio__InvoiceQuantityManual__c), 0,1), ADvendio__InvoiceQuantityManual__c, 
	CASE(ADvendio__CampaignItem__r.ADvendio__Billing_category__c,
		&quot;CPM&quot;, ADvendio__DeliveredAIsManual__c,
		&quot;CPC&quot;, ADvendio__DeliveredClicksManual__c,
		&quot;vCPM&quot;, ADvendio__ViewedAIsManual__c,
		null
	)
)</formula>
        <label>Quantity Manual (Formula)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__RevenueSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the related monthly revenue record.</description>
        <inlineHelpText>This field displays the related monthly revenue record.</inlineHelpText>
        <label>Revenue Schedule</label>
        <referenceTo>ADvendio__Revenue_Schedule__c</referenceTo>
        <relationshipLabel>Revenue Schedule Dailys</relationshipLabel>
        <relationshipName>RevenueScheduleDailys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>The UniqueKey will be filled automatically by a script.</description>
        <externalId>true</externalId>
        <inlineHelpText>The UniqueKey will be filled automatically by a script.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__ViewedAIsManual__c</fullName>
        <description>This field can be filled manually. It holds the delivered viewed ad impressions of the assigned campaign item and overrides the ad server field Viewed AIs.</description>
        <inlineHelpText>Enter the Viewed AIs manually to override the delivered viewed ad impressions.</inlineHelpText>
        <label>Viewed AIs (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ViewedAIs__c</fullName>
        <description>This field will be automatically filled. It displays the delivered viewed ad impressions of the assigned campaign item.</description>
        <inlineHelpText>This field will be automatically filled by a script. It displays the delivered viewed ad impressions of the assigned campaign item.</inlineHelpText>
        <label>Viewed AIs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_CheckDay__c</fullName>
        <description>prüft, ob Tag außerhalb des Positions-Zeitraums. temp. Hilfsfeld um diese fehlerhaften Daten für DWH auszufiltern, siehe Ticket 4237</description>
        <formula>IF ( ADvendio__Day__c &lt; ADvendio__CampaignItem__r.ADvendio__from_Date__c 
|| 
ADvendio__Day__c &gt; ADvendio__CampaignItem__r.ADvendio__until_Date__c , 
true, 
false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>prüft, ob Tag außerhalb des Positions-Zeitraums. temp. Hilfsfeld um diese fehlerhaften Daten für DWH auszufiltern, siehe Ticket 4237</inlineHelpText>
        <label>Tag außerhalb Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhAIClicksSollBisHeute__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>ADvendio__CampaignItem__r.SomDig_AIClicksSollBisHeute__c / ADvendio__CampaignItem__r.ADvendio__Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhAIClicksSollBisHeute</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhAiBooked__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>IF ( TEXT(ADvendio__CampaignItem__r.ADvendio__Billing_category__c)=&quot;CPM&quot;,
ADvendio__CampaignItem__r.ADvendio__Quantity__c / ADvendio__CampaignItem__r.ADvendio__Days__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhAiBooked</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhAmount_B3__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>ADvendio__CampaignItem__r.ADvendio__Amount_B3__c / ADvendio__CampaignItem__r.ADvendio__Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhAmount_B3</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhAmount__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>ADvendio__CampaignItem__r.ADvendio__Amount__c / ADvendio__CampaignItem__r.ADvendio__Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhAmount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhAmount_net__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>ADvendio__CampaignItem__r.ADvendio__Amount_net__c / ADvendio__CampaignItem__r.ADvendio__Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhAmount_net</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhAmount_net_net__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>ADvendio__CampaignItem__r.ADvendio__Amount_net_net__c / ADvendio__CampaignItem__r.ADvendio__Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhAmount_net_net</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhClicksBooked__c</fullName>
        <formula>IF (TEXT(ADvendio__CampaignItem__r.ADvendio__Billing_category__c)=&quot;CPC&quot; ,
ADvendio__CampaignItem__r.ADvendio__Quantity__c / ADvendio__CampaignItem__r.ADvendio__Days__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SomDig_DwhClicksBooked</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhList_Price__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>ADvendio__CampaignItem__r.ADvendio__List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhList_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhMn3__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>ADvendio__CampaignItem__r.SomDig_Mn3__c / ADvendio__CampaignItem__r.ADvendio__Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhMn3</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhRate_Discount_4_Name__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>TEXT(ADvendio__CampaignItem__r.ADvendio__Rate_Discount_4_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhRate_Discount_4_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhRate_Discount_4__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>ADvendio__CampaignItem__r.ADvendio__Rate_Discount_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhRate_Discount_4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DwhSales_Price__c</fullName>
        <description>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</description>
        <formula>ADvendio__CampaignItem__r.ADvendio__Sales_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Für DWH Schnittstelle werden die Werte aus CampaignItem direkt hier als Formel benötigt</inlineHelpText>
        <label>SomDig_DwhSales_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Revenue Schedule Daily</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__CampaignItem__c</columns>
        <columns>ADvendio__RevenueSchedule__c</columns>
        <columns>ADvendio__Day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RSD-{0}</displayFormat>
        <label>Revenue Schedule Daily No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedule Dailys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>